[gd_scene load_steps=5 format=2]

[ext_resource path="res://code_editor/FileSystem.gd" type="Script" id=1]
[ext_resource path="res://theme/love2d/love2d.tres" type="Theme" id=2]
[ext_resource path="res://code_editor/code_editor.gd" type="Script" id=3]
[ext_resource path="res://play-icon.png" type="Texture" id=4]

[node name="CodeEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.152941, 0.164706, 1 )

[node name="RefreshButton" type="Button" parent="ColorRect"]
margin_left = 5.0
margin_top = 36.0
margin_right = 187.0
margin_bottom = 64.0
text = "Refresh directory"

[node name="CloseTabButton" type="Button" parent="ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -125.0
margin_top = 33.0
margin_right = -23.0
margin_bottom = 61.0
disabled = true
text = "Close Tab"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 68.0

[node name="FileSystem" type="Tree" parent="HSplitContainer"]
margin_right = 200.0
margin_bottom = 532.0
rect_min_size = Vector2( 200, 0 )
drop_mode_flags = 3
select_mode = 2
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
margin_left = 212.0
margin_right = 1024.0
margin_bottom = 532.0
split_offset = 450

[node name="TabContainer" type="TabContainer" parent="HSplitContainer/VSplitContainer"]
margin_right = 812.0
margin_bottom = 494.0
tab_align = 0
use_hidden_tabs_for_min_size = true

[node name="Output" type="TextEdit" parent="HSplitContainer/VSplitContainer"]
margin_top = 506.0
margin_right = 812.0
margin_bottom = 532.0
readonly = true
highlight_all_occurrences = true
smooth_scrolling = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.0
margin_top = -186.0
margin_right = 301.0
margin_bottom = 186.0
access = 2

[node name="MenuButton" type="MenuButton" parent="."]
margin_right = 83.0
margin_bottom = 31.0
text = "File"

[node name="HelpMenu" type="MenuButton" parent="."]
margin_left = 83.0
margin_top = 2.0
margin_right = 166.0
margin_bottom = 33.0
focus_mode = 2
text = "Help"

[node name="PlaySceneButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -23.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 53.0
icon = ExtResource( 4 )
expand_icon = true

[node name="WarningDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = -87.0
margin_right = 206.5
margin_bottom = 87.0
window_title = "Missing File!"
dialog_text = "Warning: Your file seems to be missing
or has been moved to somewhere else.

Please close this tab and open it again
once you found it."

[connection signal="pressed" from="ColorRect/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="ColorRect/CloseTabButton" to="." method="_on_CloseTabButton_pressed"]
[connection signal="item_activated" from="HSplitContainer/FileSystem" to="." method="_on_FileSystem_item_activated"]
[connection signal="tab_selected" from="HSplitContainer/VSplitContainer/TabContainer" to="." method="_on_TabContainer_tab_selected"]
[connection signal="tab_selected" from="HSplitContainer/VSplitContainer/TabContainer" to="HSplitContainer/FileSystem" method="_on_TabContainer_tab_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="HSplitContainer/FileSystem" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="PlaySceneButton" to="." method="_on_PlaySceneButton_pressed"]
